# triangle

./: Cargo.toml  README.md
src/: lib.rs  lib32.rs  tests.rs
